// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFlexItem grow 1 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow1"
/>
`;

exports[`EuiFlexItem grow 2 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow2"
/>
`;

exports[`EuiFlexItem grow 3 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow3"
/>
`;

exports[`EuiFlexItem grow 4 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow4"
/>
`;

exports[`EuiFlexItem grow 5 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow5"
/>
`;

exports[`EuiFlexItem grow 6 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow6"
/>
`;

exports[`EuiFlexItem grow 7 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow7"
/>
`;

exports[`EuiFlexItem grow 8 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow8"
/>
`;

exports[`EuiFlexItem grow 9 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow9"
/>
`;

exports[`EuiFlexItem grow 10 is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrow10"
/>
`;

exports[`EuiFlexItem grow false is rendered 1`] = `
<div
  class="euiFlexItem euiFlexItem--flexGrowZero"
/>
`;

exports[`EuiFlexItem grow true is rendered 1`] = `
<div
  class="euiFlexItem"
/>
`;

exports[`EuiFlexItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFlexItem testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
